samples/_failures_safe/1761216244_ea56b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d51ba8ec.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_d51ba8ec.c:136:56: error: ‘const struct LogStats’ has no member named ‘m’
  136 |     printf("Most frequent level: %s\n", analyzer->stats.m
      |                                                        ^
./samples/SAFE/__tmp_d51ba8ec.c:136:58: error: expected ‘)’ at end of input
  136 |     printf("Most frequent level: %s\n", analyzer->stats.m
      |           ~                                              ^
      |                                                          )
./samples/SAFE/__tmp_d51ba8ec.c:136:5: error: expected declaration or statement at end of input
  136 |     printf("Most frequent level: %s\n", analyzer->stats.m
      |     ^~~~~~
